--- a/citation_cluster_analysis_speeding.ipynb
+++ b/citation_cluster_analysis_speeding.ipynb
@@ -16,7 +16,7 @@
     "On a weekly basis the City of Scottsdale Police Department publishes a [dataset](http://data.scottsdaleaz.gov/dataset/police-citations)* which includes one prior years worth citations.  These citations are largely made up of vehicle related infractions such as speeding.  \n",
     "\n",
     "\n",
-    "I downloaded the data in September 2018, September 2019, and January 2020.  In raw format the combined dataset includes just over XXK rows and 22 columns.  For privacy issues, the City of Scottsdale does not release citation data for anyone under 18.  \n",
+    "I downloaded the data in September 2018, September 2019, and January 2020.  In raw format the combined dataset includes just over 56K rows and 22 columns.  For privacy issues, the City of Scottsdale does not release citation data for anyone under 18.  \n",
     "\n",
     "<br/>\n",
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "Name: cited_person_sex, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "Name: cited_person_sex, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "(56403, 22)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,6 +206,232 @@
    "source": [
     "# how many rows and columns are in the dataset?\n",
     "citations.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>arizona_statute_code</th>\n",
+       "      <th>beat</th>\n",
+       "      <th>charge_description</th>\n",
+       "      <th>citation_#</th>\n",
+       "      <th>citation_date</th>\n",
+       "      <th>citation_time</th>\n",
+       "      <th>citation_type_code</th>\n",
+       "      <th>citation_type_description</th>\n",
+       "      <th>cited_person</th>\n",
+       "      <th>cited_person_age</th>\n",
+       "      <th>cited_person_ethnicity</th>\n",
+       "      <th>cited_person_race</th>\n",
+       "      <th>cited_person_sex</th>\n",
+       "      <th>city</th>\n",
+       "      <th>district</th>\n",
+       "      <th>officer_badge_#</th>\n",
+       "      <th>state</th>\n",
+       "      <th>street</th>\n",
+       "      <th>street_number</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>zone</th>\n",
+       "      <th>tcmainid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>28-701A</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Speed Greater Than R&amp;P or Posted</td>\n",
+       "      <td>8096915</td>\n",
+       "      <td>2019-07-10</td>\n",
+       "      <td>747</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>Civil Traffic</td>\n",
+       "      <td>Hansen, Christopher</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>W</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Scottsdale</td>\n",
+       "      <td>D3</td>\n",
+       "      <td>1335</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>E Shea Bl</td>\n",
+       "      <td>6xxx</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3003</td>\n",
+       "      <td>662799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>28-701A</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Speed Greater Than R&amp;P or Posted</td>\n",
+       "      <td>8096916</td>\n",
+       "      <td>2019-07-10</td>\n",
+       "      <td>800</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>Civil Traffic</td>\n",
+       "      <td>Koch, JOshua</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>W</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Scottsdale</td>\n",
+       "      <td>D3</td>\n",
+       "      <td>1335</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>E Shea Bl</td>\n",
+       "      <td>6xxx</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3003</td>\n",
+       "      <td>662801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>28-701A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Speed Greater Than R&amp;P or Posted</td>\n",
+       "      <td>8096917</td>\n",
+       "      <td>2019-07-10</td>\n",
+       "      <td>853</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>Civil Traffic</td>\n",
+       "      <td>Dahl, Renee</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>W</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Scottsdale</td>\n",
+       "      <td>D2</td>\n",
+       "      <td>1335</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>N Goldwater Bl</td>\n",
+       "      <td>4xxx</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1102</td>\n",
+       "      <td>662802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>28-701A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Speed Greater Than R&amp;P or Posted</td>\n",
+       "      <td>8096918</td>\n",
+       "      <td>2019-07-11</td>\n",
+       "      <td>843</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>Civil Traffic</td>\n",
+       "      <td>Lu, Hung</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>A</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Scottsdale</td>\n",
+       "      <td>D2</td>\n",
+       "      <td>1335</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>N Goldwater Bl</td>\n",
+       "      <td>4xxx</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1102</td>\n",
+       "      <td>662804</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>28-701A</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>Speed Greater Than R&amp;P or Posted</td>\n",
+       "      <td>8095091</td>\n",
+       "      <td>2019-07-06</td>\n",
+       "      <td>2215</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>Civil Traffic</td>\n",
+       "      <td>Noller-Johnson, Aarron</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>U</td>\n",
+       "      <td>W</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Scottsdale</td>\n",
+       "      <td>D4</td>\n",
+       "      <td>1450</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>N Pima Rd</td>\n",
+       "      <td>2xxx</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3801</td>\n",
+       "      <td>662805</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  arizona_statute_code  beat                charge_description  citation_#  \\\n",
+       "0              28-701A  12.0  Speed Greater Than R&P or Posted     8096915   \n",
+       "1              28-701A  12.0  Speed Greater Than R&P or Posted     8096916   \n",
+       "2              28-701A   7.0  Speed Greater Than R&P or Posted     8096917   \n",
+       "3              28-701A   7.0  Speed Greater Than R&P or Posted     8096918   \n",
+       "4              28-701A  19.0  Speed Greater Than R&P or Posted     8095091   \n",
+       "\n",
+       "  citation_date  citation_time citation_type_code citation_type_description  \\\n",
+       "0    2019-07-10            747                 CV             Civil Traffic   \n",
+       "1    2019-07-10            800                 CV             Civil Traffic   \n",
+       "2    2019-07-10            853                 CV             Civil Traffic   \n",
+       "3    2019-07-11            843                 CV             Civil Traffic   \n",
+       "4    2019-07-06           2215                 CV             Civil Traffic   \n",
+       "\n",
+       "             cited_person  cited_person_age cited_person_ethnicity  \\\n",
+       "0     Hansen, Christopher              19.0                      N   \n",
+       "1            Koch, JOshua              36.0                      N   \n",
+       "2             Dahl, Renee              61.0                      N   \n",
+       "3                Lu, Hung              59.0                      N   \n",
+       "4  Noller-Johnson, Aarron              23.0                      U   \n",
+       "\n",
+       "  cited_person_race cited_person_sex        city district   officer_badge_#  \\\n",
+       "0                 W                M  Scottsdale       D3  1335               \n",
+       "1                 W                M  Scottsdale       D3  1335               \n",
+       "2                 W                F  Scottsdale       D2  1335               \n",
+       "3                 A                M  Scottsdale       D2  1335               \n",
+       "4                 W                M  Scottsdale       D4  1450               \n",
+       "\n",
+       "  state          street street_number  zip  zone  tcmainid  \n",
+       "0    AZ       E Shea Bl          6xxx  NaN  3003    662799  \n",
+       "1    AZ       E Shea Bl          6xxx  NaN  3003    662801  \n",
+       "2    AZ  N Goldwater Bl          4xxx  NaN  1102    662802  \n",
+       "3    AZ  N Goldwater Bl          4xxx  NaN  1102    662804  \n",
+       "4    AZ       N Pima Rd          2xxx  NaN  3801    662805  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "citations.head()"
    ]
   },
   {
@@ -1375,13 +1601,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Revisit computations for above amounts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## k-means - visualize with n_clusters=3"
    ]
   },
@@ -1855,6 +2074,47 @@
     "                hue=pd.Series(labels))\n",
     "plt.legend(loc='best')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other things to try"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "experiment with other methods to measure clusters:\n",
+    "https://scikit-learn.org/stable/modules/clustering.html#clustering-performance-evaluation\n",
+    "\n",
+    "examine grouping results,\n",
+    "append labels back on df,\n",
+    "group by lables,\n",
+    "look at means of all the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
