--- a/citation_location.ipynb
+++ b/citation_location.ipynb
@@ -4,29 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CITATION Location - clustering analysis\n",
-    "\n",
-    "### Process:\n",
-    "\n",
-    "1. Subset the dataset based on **top locations** and **top citations**\n",
-    "\n",
-    "1. For each citation - examine for age, location, time of day clusters\n",
-    "\n",
-    "1. For each location:\n",
-    "    examine for age, time of day, citation type clusters\n",
-    "\n",
-    "1. For each hour of the day:\n",
-    "    examine for age, citation type, and location clusters\n",
-    "\n",
-    "\n",
-    "for each of these find the highest silhouette score for that particular citation, location, hour of the day\n"
+    "# CITATION LOCATION - clustering analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IMPORT LIBRARIES AND DATA"
+    "### IMPORT LIBRARIES AND DATA"
    ]
   },
   {
