--- a/0.data_prep_eda.ipynb
+++ b/0.data_prep_eda.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "4    AZ       N Pima Rd          2xxx  NaN  3801    662805  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "(55747, 25)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,6 +486,36 @@
    "metadata": {},
    "source": [
     "#### Citation Types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Criminal Damage-Deface                     149\n",
+       "False Report to Law Enforcement            146\n",
+       "Adequate Windshield Required-Automobile    145\n",
+       "Drive Wrong Way On One Way Road            130\n",
+       "Liquor-Under 21 Any Liquor In Body         127\n",
+       "Reckless Driving                           120\n",
+       "Waste of Finite Resource <=65mph           114\n",
+       "F/Obey Police Officer                      112\n",
+       "Improper Material/Tint On Window           107\n",
+       "Fail to Yield On Green                     106\n",
+       "Name: charge_description, dtype: int64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "citations.charge_description.value_counts()[citations.charge_description.value_counts().values > 100].tail(10)"
    ]
   },
   {
@@ -1030,6 +1060,46 @@
    "source": [
     "# examine street locations associated with beat #20\n",
     "citations.loc[citations.beat == 20, 'street'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "E McKellips Rd / N Scottsdale Rd     71\n",
+       "E Indian School Rd / N Pima Rd       39\n",
+       "N 90th St / L101                     38\n",
+       "N 64th St / E McDowell Rd            35\n",
+       "E Jackrabbit Rd / N Scottsdale Rd    33\n",
+       "                                     ..\n",
+       "E Mayo Bl                             1\n",
+       "N 68th St / E Continental DR          1\n",
+       "E Via De Ventura                      1\n",
+       "E Highland Rd                         1\n",
+       "L101 Sb / E Via De Ventura            1\n",
+       "Name: street, Length: 92, dtype: int64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# examine street locations associated with beat #99\n",
+    "# this beat clearly doesn't fit in with the normal beat sequencing\n",
+    "citations.loc[citations.beat == 99, 'street'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Beat 99 has fewer citations associated with it, they also seem to be spread out throughout Scottsdale."
    ]
   },
   {
